MiniCParser.cpp

// Generated from MiniC.g4 by ANTLR 4.8


#include "MiniCVisitor.h"

#include "MiniCParser.h"


using namespace antlrcpp;
using namespace antlr4;

MiniCParser::MiniCParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MiniCParser::~MiniCParser() {
  delete _interpreter;
}

std::string MiniCParser::getGrammarFileName() const {
  return "MiniC.g4";
}

const std::vector<std::string>& MiniCParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MiniCParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MiniCParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniCParser::ProgramContext::EOF() {
  return getToken(MiniCParser::EOF, 0);
}

std::vector<MiniCParser::DeclContext *> MiniCParser::ProgramContext::decl() {
  return getRuleContexts<MiniCParser::DeclContext>();
}

MiniCParser::DeclContext* MiniCParser::ProgramContext::decl(size_t i) {
  return getRuleContext<MiniCParser::DeclContext>(i);
}


size_t MiniCParser::ProgramContext::getRuleIndex() const {
  return MiniCParser::RuleProgram;
}


antlrcpp::Any MiniCParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MiniCParser::ProgramContext* MiniCParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MiniCParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(44);
      decl();
      setState(47); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniCParser::VOID)
      | (1ULL << MiniCParser::FLOAT)
      | (1ULL << MiniCParser::INT)
      | (1ULL << MiniCParser::FILE)
      | (1ULL << MiniCParser::STRING)
      | (1ULL << MiniCParser::CHAR)
      | (1ULL << MiniCParser::UINT)
      | (1ULL << MiniCParser::BOOL))) != 0));
    setState(49);
    match(MiniCParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

MiniCParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MiniCParser::DeclContext::getRuleIndex() const {
  return MiniCParser::RuleDecl;
}

void MiniCParser::DeclContext::copyFrom(DeclContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MethodDeclContext ------------------------------------------------------------------

MiniCParser::Method_declContext* MiniCParser::MethodDeclContext::method_decl() {
  return getRuleContext<MiniCParser::Method_declContext>(0);
}

MiniCParser::MethodDeclContext::MethodDeclContext(DeclContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::MethodDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitMethodDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarDeclContext ------------------------------------------------------------------

MiniCParser::Var_declContext* MiniCParser::VarDeclContext::var_decl() {
  return getRuleContext<MiniCParser::Var_declContext>(0);
}

MiniCParser::VarDeclContext::VarDeclContext(DeclContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}
MiniCParser::DeclContext* MiniCParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 2, MiniCParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(53);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DeclContext *>(_tracker.createInstance<MiniCParser::VarDeclContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(51);
      var_decl();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DeclContext *>(_tracker.createInstance<MiniCParser::MethodDeclContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(52);
      method_decl();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

MiniCParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniCParser::TypeContext* MiniCParser::Var_declContext::type() {
  return getRuleContext<MiniCParser::TypeContext>(0);
}

std::vector<MiniCParser::IdentifierContext *> MiniCParser::Var_declContext::identifier() {
  return getRuleContexts<MiniCParser::IdentifierContext>();
}

MiniCParser::IdentifierContext* MiniCParser::Var_declContext::identifier(size_t i) {
  return getRuleContext<MiniCParser::IdentifierContext>(i);
}


size_t MiniCParser::Var_declContext::getRuleIndex() const {
  return MiniCParser::RuleVar_decl;
}


antlrcpp::Any MiniCParser::Var_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitVar_decl(this);
  else
    return visitor->visitChildren(this);
}

MiniCParser::Var_declContext* MiniCParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 4, MiniCParser::RuleVar_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    type();
    setState(56);
    identifier();
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MiniCParser::T__0) {
      setState(57);
      match(MiniCParser::T__0);
      setState(58);
      identifier();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(MiniCParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Method_declContext ------------------------------------------------------------------

MiniCParser::Method_declContext::Method_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MiniCParser::Method_declContext::getRuleIndex() const {
  return MiniCParser::RuleMethod_decl;
}

void MiniCParser::Method_declContext::copyFrom(Method_declContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Method_decl_voidContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::Method_decl_voidContext::VOID() {
  return getToken(MiniCParser::VOID, 0);
}

tree::TerminalNode* MiniCParser::Method_decl_voidContext::ID() {
  return getToken(MiniCParser::ID, 0);
}

MiniCParser::BlockContext* MiniCParser::Method_decl_voidContext::block() {
  return getRuleContext<MiniCParser::BlockContext>(0);
}

std::vector<MiniCParser::TypeContext *> MiniCParser::Method_decl_voidContext::type() {
  return getRuleContexts<MiniCParser::TypeContext>();
}

MiniCParser::TypeContext* MiniCParser::Method_decl_voidContext::type(size_t i) {
  return getRuleContext<MiniCParser::TypeContext>(i);
}

std::vector<MiniCParser::IdentifierContext *> MiniCParser::Method_decl_voidContext::identifier() {
  return getRuleContexts<MiniCParser::IdentifierContext>();
}

MiniCParser::IdentifierContext* MiniCParser::Method_decl_voidContext::identifier(size_t i) {
  return getRuleContext<MiniCParser::IdentifierContext>(i);
}

MiniCParser::Method_decl_voidContext::Method_decl_voidContext(Method_declContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::Method_decl_voidContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitMethod_decl_void(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Method_decl_typeContext ------------------------------------------------------------------

std::vector<MiniCParser::TypeContext *> MiniCParser::Method_decl_typeContext::type() {
  return getRuleContexts<MiniCParser::TypeContext>();
}

MiniCParser::TypeContext* MiniCParser::Method_decl_typeContext::type(size_t i) {
  return getRuleContext<MiniCParser::TypeContext>(i);
}

tree::TerminalNode* MiniCParser::Method_decl_typeContext::ID() {
  return getToken(MiniCParser::ID, 0);
}

MiniCParser::BlockContext* MiniCParser::Method_decl_typeContext::block() {
  return getRuleContext<MiniCParser::BlockContext>(0);
}

std::vector<MiniCParser::IdentifierContext *> MiniCParser::Method_decl_typeContext::identifier() {
  return getRuleContexts<MiniCParser::IdentifierContext>();
}

MiniCParser::IdentifierContext* MiniCParser::Method_decl_typeContext::identifier(size_t i) {
  return getRuleContext<MiniCParser::IdentifierContext>(i);
}

MiniCParser::Method_decl_typeContext::Method_decl_typeContext(Method_declContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::Method_decl_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitMethod_decl_type(this);
  else
    return visitor->visitChildren(this);
}
MiniCParser::Method_declContext* MiniCParser::method_decl() {
  Method_declContext *_localctx = _tracker.createInstance<Method_declContext>(_ctx, getState());
  enterRule(_localctx, 6, MiniCParser::RuleMethod_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(103);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MiniCParser::FLOAT:
      case MiniCParser::INT:
      case MiniCParser::FILE:
      case MiniCParser::STRING:
      case MiniCParser::CHAR:
      case MiniCParser::UINT:
      case MiniCParser::BOOL: {
        _localctx = dynamic_cast<Method_declContext *>(_tracker.createInstance<MiniCParser::Method_decl_typeContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(66);
        type();
        setState(67);
        match(MiniCParser::ID);
        setState(68);
        match(MiniCParser::T__2);
        setState(80);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << MiniCParser::FLOAT)
          | (1ULL << MiniCParser::INT)
          | (1ULL << MiniCParser::FILE)
          | (1ULL << MiniCParser::STRING)
          | (1ULL << MiniCParser::CHAR)
          | (1ULL << MiniCParser::UINT)
          | (1ULL << MiniCParser::BOOL))) != 0)) {
          setState(69);
          type();
          setState(70);
          identifier();
          setState(77);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == MiniCParser::T__0) {
            setState(71);
            match(MiniCParser::T__0);
            setState(72);
            type();
            setState(73);
            identifier();
            setState(79);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(82);
        match(MiniCParser::T__3);
        setState(83);
        block();
        break;
      }

      case MiniCParser::VOID: {
        _localctx = dynamic_cast<Method_declContext *>(_tracker.createInstance<MiniCParser::Method_decl_voidContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(85);
        match(MiniCParser::VOID);
        setState(86);
        match(MiniCParser::ID);
        setState(87);
        match(MiniCParser::T__2);
        setState(99);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << MiniCParser::FLOAT)
          | (1ULL << MiniCParser::INT)
          | (1ULL << MiniCParser::FILE)
          | (1ULL << MiniCParser::STRING)
          | (1ULL << MiniCParser::CHAR)
          | (1ULL << MiniCParser::UINT)
          | (1ULL << MiniCParser::BOOL))) != 0)) {
          setState(88);
          type();
          setState(89);
          identifier();
          setState(96);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == MiniCParser::T__0) {
            setState(90);
            match(MiniCParser::T__0);
            setState(91);
            type();
            setState(92);
            identifier();
            setState(98);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(101);
        match(MiniCParser::T__3);
        setState(102);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

MiniCParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MiniCParser::Var_declContext *> MiniCParser::BlockContext::var_decl() {
  return getRuleContexts<MiniCParser::Var_declContext>();
}

MiniCParser::Var_declContext* MiniCParser::BlockContext::var_decl(size_t i) {
  return getRuleContext<MiniCParser::Var_declContext>(i);
}

std::vector<MiniCParser::StatementContext *> MiniCParser::BlockContext::statement() {
  return getRuleContexts<MiniCParser::StatementContext>();
}

MiniCParser::StatementContext* MiniCParser::BlockContext::statement(size_t i) {
  return getRuleContext<MiniCParser::StatementContext>(i);
}


size_t MiniCParser::BlockContext::getRuleIndex() const {
  return MiniCParser::RuleBlock;
}


antlrcpp::Any MiniCParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

MiniCParser::BlockContext* MiniCParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 8, MiniCParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(MiniCParser::T__4);
    setState(109);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniCParser::FLOAT)
      | (1ULL << MiniCParser::INT)
      | (1ULL << MiniCParser::FILE)
      | (1ULL << MiniCParser::STRING)
      | (1ULL << MiniCParser::CHAR)
      | (1ULL << MiniCParser::UINT)
      | (1ULL << MiniCParser::BOOL))) != 0)) {
      setState(106);
      var_decl();
      setState(111);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniCParser::T__4)
      | (1ULL << MiniCParser::FOR)
      | (1ULL << MiniCParser::WHILE)
      | (1ULL << MiniCParser::IF)
      | (1ULL << MiniCParser::BREAK)
      | (1ULL << MiniCParser::CONTINUE)
      | (1ULL << MiniCParser::RETURN)
      | (1ULL << MiniCParser::PRINT)
      | (1ULL << MiniCParser::PRINTLN)
      | (1ULL << MiniCParser::ID))) != 0)) {
      setState(112);
      statement();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(118);
    match(MiniCParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

MiniCParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MiniCParser::TypeContext::getRuleIndex() const {
  return MiniCParser::RuleType;
}

void MiniCParser::TypeContext::copyFrom(TypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TypeIntContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::TypeIntContext::INT() {
  return getToken(MiniCParser::INT, 0);
}

MiniCParser::TypeIntContext::TypeIntContext(TypeContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::TypeIntContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitTypeInt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeFloatContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::TypeFloatContext::FLOAT() {
  return getToken(MiniCParser::FLOAT, 0);
}

MiniCParser::TypeFloatContext::TypeFloatContext(TypeContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::TypeFloatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitTypeFloat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeUintContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::TypeUintContext::UINT() {
  return getToken(MiniCParser::UINT, 0);
}

MiniCParser::TypeUintContext::TypeUintContext(TypeContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::TypeUintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitTypeUint(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeCharContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::TypeCharContext::CHAR() {
  return getToken(MiniCParser::CHAR, 0);
}

MiniCParser::TypeCharContext::TypeCharContext(TypeContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::TypeCharContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitTypeChar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeStringContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::TypeStringContext::STRING() {
  return getToken(MiniCParser::STRING, 0);
}

MiniCParser::TypeStringContext::TypeStringContext(TypeContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::TypeStringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitTypeString(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeBoolContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::TypeBoolContext::BOOL() {
  return getToken(MiniCParser::BOOL, 0);
}

MiniCParser::TypeBoolContext::TypeBoolContext(TypeContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::TypeBoolContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitTypeBool(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeFileContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::TypeFileContext::FILE() {
  return getToken(MiniCParser::FILE, 0);
}

MiniCParser::TypeFileContext::TypeFileContext(TypeContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::TypeFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitTypeFile(this);
  else
    return visitor->visitChildren(this);
}
MiniCParser::TypeContext* MiniCParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 10, MiniCParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(127);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MiniCParser::INT: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<MiniCParser::TypeIntContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(120);
        match(MiniCParser::INT);
        break;
      }

      case MiniCParser::UINT: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<MiniCParser::TypeUintContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(121);
        match(MiniCParser::UINT);
        break;
      }

      case MiniCParser::BOOL: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<MiniCParser::TypeBoolContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(122);
        match(MiniCParser::BOOL);
        break;
      }

      case MiniCParser::CHAR: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<MiniCParser::TypeCharContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(123);
        match(MiniCParser::CHAR);
        break;
      }

      case MiniCParser::FILE: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<MiniCParser::TypeFileContext>(_localctx));
        enterOuterAlt(_localctx, 5);
        setState(124);
        match(MiniCParser::FILE);
        break;
      }

      case MiniCParser::STRING: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<MiniCParser::TypeStringContext>(_localctx));
        enterOuterAlt(_localctx, 6);
        setState(125);
        match(MiniCParser::STRING);
        break;
      }

      case MiniCParser::FLOAT: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<MiniCParser::TypeFloatContext>(_localctx));
        enterOuterAlt(_localctx, 7);
        setState(126);
        match(MiniCParser::FLOAT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MiniCParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MiniCParser::StatementContext::getRuleIndex() const {
  return MiniCParser::RuleStatement;
}

void MiniCParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ContiueContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::ContiueContext::CONTINUE() {
  return getToken(MiniCParser::CONTINUE, 0);
}

MiniCParser::ContiueContext::ContiueContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::ContiueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitContiue(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::PrintContext::PRINT() {
  return getToken(MiniCParser::PRINT, 0);
}

MiniCParser::ExprContext* MiniCParser::PrintContext::expr() {
  return getRuleContext<MiniCParser::ExprContext>(0);
}

MiniCParser::PrintContext::PrintContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::PrintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitPrint(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintlnContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::PrintlnContext::PRINTLN() {
  return getToken(MiniCParser::PRINTLN, 0);
}

MiniCParser::ExprContext* MiniCParser::PrintlnContext::expr() {
  return getRuleContext<MiniCParser::ExprContext>(0);
}

MiniCParser::PrintlnContext::PrintlnContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::PrintlnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitPrintln(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakContext ------------------------------------------------------------------

tree::TerminalNode* MiniCParser::BreakContext::BREAK() {
  return getToken(MiniCParser::BREAK, 0);
}

MiniCParser::BreakContext::BreakContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any MiniCParser::BreakContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniCVisitor*>(visitor))
    return parserVisitor->visitBreak(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ListAssnContext ------------------------------------------------------------------

std::vector<MiniCParser::AssignmentContext *> MiniCParser::ListAssnContext::assignment() {
  return getRuleContexts<MiniCParser::AssignmentContext>();
}

MiniCParser::AssignmentContext* MiniCParser::ListAssnContext::assignment(size_t i) {
  return getRuleContext<MiniCParser::AssignmentContext>(i);
}

MiniCParser::ListAssnContext::ListAssnContext(StatementContext *ctx) { copyFrom(ctx); }

